--- a/loner-assistant/index.html
+++ b/loner-assistant/index.html
@@ -225,6 +225,14 @@
             <div id="characters-list" class="grid-list"></div>
         </div>
 
+        <!-- SESSION VIEW -->
+        <div class="panel">
+            <h3>Current Session</h3>
+            <div id="current-session-info">
+                <p class="text-muted">No session loaded</p>
+            </div>
+        </div>
+
         <!-- TOOLS VIEW (Roll Tables, etc.) -->
         <div id="view-tools" class="view">
             <div class="view-header">
@@ -253,15 +261,13 @@
 
     <!-- Modal Template (for forms, etc.) -->
     <div id="modal" class="modal hidden">
-        <div class="modal-backdrop" onclick="closeModal()"></div>
+        <div class="modal-backdrop" onclick="UI.closeModal()"></div>
         <div class="modal-content">
             <div class="modal-header">
                 <h3 id="modal-title">Modal Title</h3>
-                <button class="modal-close" onclick="closeModal()">×</button>
+                <button class="modal-close" onclick="UI.closeModal()">×</button>
             </div>
-            <div class="modal-body" id="modal-body">
-                <!-- Dynamic content -->
-            </div>
+            <div class="modal-body" id="modal-body"></div>
         </div>
     </div>
 
@@ -273,14 +279,15 @@
     <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
     <script src="https://cdn.quilljs.com/1.3.6/quill.min.js"></script>
     
-    <!-- Load our app files -->
-    <script src="js/database.js"></script>
-    <script src="js/ui.js"></script>
-    <script src="js/oracle.js"></script>
-    <script src="js/campaigns.js"></script>
-    <script src="js/characters.js"></script>
-    <script src="js/editor.js"></script>
-    <script src="js/main.js"></script>
+    <!-- Load our app files IN ORDER -->
+    <script src="js/database.js"></script>        <!-- 1. Database layer -->
+    <script src="js/ui.js"></script>              <!-- 2. UI helpers -->
+    <script src="js/oracle.js"></script>          <!-- 3. Oracle/dice -->
+    <script src="js/editor.js"></script>          <!-- 4. Editor management -->
+    <script src="js/campaigns.js"></script>       <!-- 5. Campaign management -->
+    <script src="js/sessions.js"></script>         <!-- 5b. Session management -->
+    <script src="js/characters.js"></script>      <!-- 6. Character management -->
+    <script src="js/main.js"></script>            <!-- 7. Main initialization (LAST) -->
 
 </body>
 </html>
