--- a/loner-assistant/index.html
+++ b/loner-assistant/index.html
@@ -214,9 +214,14 @@
                     <!-- Get Inspired -->
                     <div class="panel">
                         <h3>Get Inspired</h3>
-                        <button class="btn btn-secondary" onclick="getInspired()">
-                            ✨ Random Prompt
-                        </button>
+                        <div style="display: flex; gap: 0.5rem; margin-bottom: 0.5rem;">
+                            <button class="btn btn-secondary" onclick="TableManager.rollGetInspired()" style="flex: 1;">
+                                ✨ Random Prompt
+                            </button>
+                            <button class="btn btn-sm btn-outline" onclick="TableManager.showFlavorPicker()" title="Change flavor">
+                                ⚙️
+                            </button>
+                        </div>
                         <div id="inspiration-result"></div>
                     </div>
 
@@ -247,26 +252,13 @@
         </div>
 
         <!-- TOOLS VIEW (Roll Tables, etc.) -->
+        <!-- TOOLS VIEW (Roll Tables, etc.) -->
         <div id="view-tools" class="view">
             <div class="view-header">
                 <h2>Tools & Tables</h2>
             </div>
-            <div class="tools-grid">
-                <div class="tool-card">
-                    <h3>Roll Tables</h3>
-                    <p>Access tables from supplements</p>
-                    <button class="btn btn-secondary">Browse Tables</button>
-                </div>
-                <div class="tool-card">
-                    <h3>Story Dice</h3>
-                    <p>Visual inspiration generator</p>
-                    <button class="btn btn-secondary">Roll Dice</button>
-                </div>
-                <div class="tool-card">
-                    <h3>Export Data</h3>
-                    <p>Backup your campaigns</p>
-                    <button class="btn btn-secondary">Export</button>
-                </div>
+            <div id="tools-grid" class="tools-grid">
+                <!-- Content will be dynamically rendered by TableManager -->
             </div>
         </div>
 
@@ -342,18 +334,23 @@
     <script src="https://cdn.quilljs.com/1.3.6/quill.min.js"></script>
     
     <!-- Load our app files IN ORDER -->
-    <script src="js/database.js"></script>        <!-- 1. Database layer -->
-    <script src="js/ui.js"></script>              <!-- 2. UI helpers -->
-    <script src="js/oracle.js"></script>          <!-- 3. Oracle/dice -->
-    <script src="js/editor.js"></script>          <!-- 4. Editor management -->
-    <script src="js/campaigns.js"></script>       <!-- 5. Campaign management -->
-    <script src="js/sessions.js"></script>        <!-- 5b. Session management -->
-    <script src="js/characters.js"></script>      <!-- 6. Character management -->
-    <script src="js/npcs.js"></script>            <!-- 6b. NPC management -->
-    <script src="js/locations.js"></script>       <!-- 6c. Location management -->
-    <script src="js/threads.js"></script>         <!-- 6d. Thread management -->
-    <script src="js/events.js"></script>          <!-- 6e. Event management -->
-    <script src="js/main.js"></script>            <!-- 7. Main initialization (LAST) -->
+    <script src="js/database.js"></script>               <!-- 1. Database layer -->
+    <script src="js/ui.js"></script>                     <!-- 2. UI helpers -->
+    <script src="js/oracle.js"></script>                 <!-- 3. Oracle/dice -->
+    <script src="js/editor.js"></script>                 <!-- 4. Editor management -->
+    <script src="js/campaigns.js"></script>              <!-- 5. Campaign management -->
+    <script src="js/sessions.js"></script>               <!-- 5b. Session management -->
+    <script src="js/characters.js"></script>             <!-- 6. Character management -->
+    <script src="js/npcs.js"></script>                   <!-- 6b. NPC management -->
+    <script src="js/locations.js"></script>              <!-- 6c. Location management -->
+    <script src="js/threads.js"></script>                <!-- 6d. Thread management -->
+    <script src="js/events.js"></script>                 <!-- 6e. Event management -->
+    <script src="data/tables/core-loner.js"></script>    <!-- Built-in Loner tables -->
+    <script src="data/tables/core-inspired.js"></script> <!-- Built-in Inspiration prompts -->
+    <script src="data/table-registry.js"></script>       <!-- Table registry -->
+    <script src="js/tables.js"></script>                 <!-- 7. Roll tables -->
+    <script src="js/table-manager.js"></script>          <!-- 7b. Table manager -->
+    <script src="js/main.js"></script>                   <!-- 7. Main initialization (LAST) -->
 
 </body>
 </html>
